--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
     <artifactId>RegulationDB</artifactId>
     <version>0.9</version>
     <packaging>war</packaging>
+    <name>RegulationDB</name>
 
     <properties>
         <hibernate-version>5.2.9.Final</hibernate-version>
+        <spring.version>4.1.1.RELEASE</spring.version>
     </properties>
-
 
     <dependencies>
         <dependency>
@@ -59,6 +60,34 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
         </dependency>
     </dependencies>
 
